src/test/ui/issues/issue-4736.stderr
error[E0560]: struct `NonCopyable` has no field named `p`
  --> $DIR/issue-4736.rs:4:26
   |
LL |     let z = NonCopyable{ p: () };
   |                          ^ help: a field with a similar name exists: `0`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0560`.
